# playgo2

./: CMakeLists.txt  README.md
experiments/camera/: opencv.py
experiments/dds/: CMakeLists.txt  install_cyclonedds.md  list_topics.c
experiments/dds/python/: high_state_subscriber.py  lidar_msgs.py  subscriber.py
experiments/gstreamer/: CMakeLists.txt  basic-tutorial-1.c  install_deps.sh
experiments/ros2/: lidar_publisher.py
experiments/sdk2/: CMakeLists.txt  motion_switcher_client.py
experiments/sdk2/high/: control.py  standdown.py  standup.py
playgo2/doggy/: control.py  doggy.py  logger.py  main.py
playgo2/doggy/fsm/: __init__.py  attract_state.py  base_state.py  follow_state.py  fsm.py  stroll_state.py
